# src/routers/authorized.ts
@@ -1,7 +1,7 @@
 import { Router } from 'express';
 import { DataSource } from 'typeorm';
 import User from '@/entities/User.entity';
-import { cacheMiddleware, createJwt, requestHandler, sha256, verifyJwtMiddleware } from '@/utils';
+import { cacheMiddleware, createJwt, requestHandler, sha256, uploadMiddleware, verifyJwtMiddleware } from '@/utils';
 
 /**
  * @description 로그인 후
@@ -17,13 +17,17 @@ const authorizedRouter = (dataSource: DataSource) => {
     cacheMiddleware(1800),
     verifyJwtMiddleware(dataSource, 'refreshToken'),
     requestHandler(async (req, res) => {
-      const userInfo = req.user;
+      const user = req.user;
+
+      const userData = await userRepository.findOne({
+        select: { uuid: true, userId: true, userName: true, profileImg: true, createDate: true, updateDate: true },
+        where: { uuid: user.uuid }
+      });
+
+      const userInfo = userData?.getUserInfo() as UserInfo;
 
       res.status(200).json({
-        userInfo: await userRepository.findOne({
-          select: { uuid: true, userId: true, userName: true, registerDate: true },
-          where: { uuid: userInfo.uuid }
-        }),
+        userInfo,
         tokens: {
           accessToken: createJwt<JwtPayload>({ type: 'accessToken', userInfo }, '1h'),
           refreshToken: createJwt<JwtPayload>({ type: 'refreshToken', userInfo }, '3d')
@@ -37,19 +41,30 @@ const authorizedRouter = (dataSource: DataSource) => {
   /** 본인 사용자 정보 수정 */
   router.put(
     '/users',
+    uploadMiddleware.single('profileImg'),
     requestHandler(async (req, res) => {
       const { uuid: userUUID, userId } = req.user;
-      const { password, newPassword, userName } = req.body as UpdateUserBody;
+      const { password, newPassword, userName, profileImg: profileImgValue } = req.body as UpdateUserBody;
+      const profileImg = req.file?.buffer;
 
       const updateResult = await userRepository.update(
         { userId, password: sha256(password) },
-        { password: newPassword ? sha256(newPassword) : undefined, userName }
+        {
+          password: newPassword ? sha256(newPassword) : sha256(password),
+          userName: userName || undefined,
+          profileImg: profileImg || (profileImgValue === '' ? null : undefined),
+          updateDate: new Date()
+        }
       );
       if (!updateResult.affected) return res.sendStatus(403);
-      const userInfo = await userRepository.findOne({
-        select: { uuid: true, userId: true, userName: true, registerDate: true },
-        where: { uuid: userUUID }
-      });
+
+      const userInfo = (
+        await userRepository.findOne({
+          select: { uuid: true, userId: true, userName: true, profileImg: true, createDate: true, updateDate: true },
+          where: { uuid: userUUID }
+        })
+      )?.getUserInfo() as UserInfo;
+
       res.status(200).json(userInfo);
     })
   );
@@ -63,7 +78,7 @@ const authorizedRouter = (dataSource: DataSource) => {
       const userInfo = await dataSource.transaction(async manager => {
         const userRepository = manager.getRepository(User);
         const result = await userRepository.findOne({
-          select: { uuid: true, userId: true, userName: true, registerDate: true },
+          select: { uuid: true, userId: true, userName: true, createDate: true },
           where: { uuid: userUUID }
         });
         if (!result) return null;
